Removed unnecessary blocks and styles

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
       </div>
     </div>
   </section><!--/#features-->
-
+<!--
   <section id="pricing">
     <div class="container">
       <div class="row">
@@ -585,8 +585,8 @@
         </div>
       </div>
     </div>
-  </section><!--/#pricing-->
-
+  </section>pricing-->
+  <!--
   <section id="twitter" class="parallax">
     <div>
       <a class="twitter-left-control" href="#twitter-carousel" role="button" data-slide="prev"><i class="fa fa-angle-left"></i></a>
@@ -615,8 +615,8 @@
         </div>
       </div>
     </div>
-  </section><!--/#twitter-->
-
+  </section>/#twitter-->
+<!--
   <section id="blog">
     <div class="container">
       <div class="row">
@@ -712,7 +712,7 @@
         </div>                
       </div>
     </div>
-  </section><!--/#blog-->
+  </section>/#blog-->
 
   <section id="contact">
     <div id="google-map" class="wow fadeIn" data-latitude="52.365629" data-longitude="4.871331" data-wow-duration="1000ms" data-wow-delay="400ms"></div>
