--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
             <div class="service-icon">
-              <i class="fa fa-gift"></i>
+              <i class="fa fa-search" aria-hidden="true"></i>
             </div>
             <div class="service-info">
               <h3>SEO</h3>
