Made a link for the contact form in portfolio section.

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="row">
         <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
           <h2>Portfolio</h2>
-          <p>If you are looking for something specific, please enquire via Contact Us form.</p>
+          <p>If you are looking for something specific, please enquire via <a href="#contact">Contact Us form</a>.</p>
         </div>
       </div>
     </div>
