small fix(forgot description)

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
               <div class="overlay-content">
                 <div class="overlay-text">
                   <div class="folio-info">
-                    <h3>Time Hours</h3>
-                    <p>Design, Photography</p>
+                    <h3>The MeatBall</h3>
+                    <p>typescript, javascript, html, css, angular 4</p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-MeatBall.html" ><i class="fa fa-link"></i></a></span>
