Small fixes in Meat Ball portfolio

--- a/portfolio/portfolio-MeatBall.html
+++ b/portfolio/portfolio-MeatBall.html
@@ -3,21 +3,21 @@
 		<a class="close-folio-item" href="#"><i class="fa fa-times"></i></a>
 		<img class="img-responsive" src="images/portfolio/MeatBall.jpg" alt="">
 		<div class="row">
-			<div class="col-sm-9">
+			<div class="col-sm-8">
 				<div class="project-info">
 					<h3>The Meatball Stoppe </h3>
 					<p>Discription: The customer wanted single page application for family business. </p>
 					<p>We developed this project using Angular 4, typescript, HTML5, CSS3. Also were working on optimizations for the production environment.</p>
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-4">
 				<div class="project-details">
 					<h3>Project Details</h3>
 					<p><span>Client: </span>The Meatball Stoppe</p>
 					<p><span>Date:</span> Apr 2017</p>
 					<p><span>Tag:</span> typescript, javascript, html, css, angular 4</p>
-					<p><span>GitHub:</span><a href="https://github.com/grod220/TMSv2">https://github.com/grod220/TMSv2</a></p>
-					<p><span>The link:</span><a href="https://www.themeatballstoppe.com/">https://www.themeatballstoppe.com/</a></p>
+					<p><span>GitHub:</span> <a href="https://github.com/grod220/TMSv2" target="_blank">https://github.com/grod220/TMSv2</a></p>
+					<p><span>The link:</span> <a href="https://www.themeatballstoppe.com/" target="_blank">https://www.themeatballstoppe.com/</a></p>
 				</div>  
 			</div>
 		</div>
