--- a/index.html
+++ b/index.html
@@ -260,17 +260,17 @@
         <div class="col-sm-3">
           <div class="folio-item wow fadeInRightBig" data-wow-duration="1000ms" data-wow-delay="500ms">
             <div class="folio-image">
-              <img class="img-responsive" src="images/portfolio/3.jpg" alt="">
+              <img class="img-responsive" src="images/portfolio/okSmall.jpg" alt="">
             </div>
             <div class="overlay">
               <div class="overlay-content">
                 <div class="overlay-text">
                   <div class="folio-info">
-                    <h3>Time Hours</h3>
-                    <p>Design, Photography</p>
+                    <h3>Web designer</h3>
+                    <p>Wordpres, JavaScript, SASS</p>
                   </div>
                   <div class="folio-overview">
-                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-OlgaKramar.html" ><i class="fa fa-link"></i></a></span>
                     <span class="folio-expand"><a href="images/portfolio/portfolio-details.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
                   </div>
                 </div>
