--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="col-sm-3">
           <div class="folio-item wow fadeInRightBig" data-wow-duration="1000ms" data-wow-delay="500ms">
             <div class="folio-image">
-              <img class="img-responsive" src="images/portfolio/okSmall.jpg" alt="">
+              <img class="img-responsive" src="images/portfolio/okSmall.jpg" alt="solid soft">
             </div>
             <div class="overlay">
               <div class="overlay-content">
@@ -281,18 +281,18 @@
         <div class="col-sm-3">
           <div class="folio-item wow fadeInLeftBig" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="folio-image">
-              <img class="img-responsive" src="images/portfolio/4.jpg" alt="">
+              <img class="img-responsive" src="images/portfolio/OneSignal/SignalIndexSmall.jpg" alt="web development solid soft">
             </div>
             <div class="overlay">
               <div class="overlay-content">
                 <div class="overlay-text">
                   <div class="folio-info">
-                    <h3>Time Hours</h3>
-                    <p>Design, Photography</p>
+                    <h3>Notification scheduler</h3>
+                    <p>Vue.js, JavaScript, ES6</p>
                   </div>
                   <div class="folio-overview">
-                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
-                    <span class="folio-expand"><a href="images/portfolio/portfolio-details.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
+                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-OneSignal.html" ><i class="fa fa-link"></i></a></span>
+                    <span class="folio-expand"><a href="images/portfolio/OneSignal/SignalIndex.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
                   </div>
                 </div>
               </div>
