About me(photo and text) changed

--- a/index.html
+++ b/index.html
@@ -447,20 +447,18 @@
           <div class="col-sm-3">
             <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="800ms">
               <div class="member-image">
-                <img class="img-responsive" src="images/team/3.jpg" alt="">
+                <img class="img-responsive" src="images/team/teamVasiliy.jpg" alt="">
               </div>
               <div class="member-info">
-                <h3>Lois Clark</h3>
+                <h3>Vasiliy Malimon</h3>
                 <h4>Developer</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                <p>Front End Developer <br>ARS LONGA, VITA BREVIS &#169;</p>
+
               </div>
               <div class="social-icons">
                 <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
+                  <li><a class="facebook" href="https://www.facebook.com/vasiliy.malimon" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a class="linkedin" href="https://www.linkedin.com/in/vasiliy-malimon-b05877125/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
               </div>
             </div>
