--- a/index.html
+++ b/index.html
@@ -453,7 +453,6 @@
                 <h3>Vasiliy Malimon</h3>
                 <h4>Developer</h4>
                 <p>Front End Developer <br>ARS LONGA, VITA BREVIS &#169;</p>
-
               </div>
               <div class="social-icons">
                 <ul>
@@ -763,7 +762,7 @@
                 <ul class="address">
                   <li><i class="fa fa-map-marker"></i> <span> Address:</span> Podilska 25 st., Khmelnytskiy, Ukraine, 29000 </li>
                   <li><i class="fa fa-phone"></i> <span> Phone:</span> +38 (097) 9219 600 </li>
-                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com"> hello@gmail.com</a></li>
+                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com"> solidsoftmanager@gmail.com</a></li>
                   <li><i class="fa fa-globe"></i> <span> Website:</span> <a href="#">www.sitename.com</a></li>
                 </ul>
               </div>
