Created new team member

--- a/index.html
+++ b/index.html
@@ -313,44 +313,20 @@
       </div>
       <div class="team-members">
         <div class="row">
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-sm-offset-3">
             <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="member-image">
-                <img class="img-responsive" src="images/team/1.jpg" alt="">
+                <img class="img-responsive" src="images/team/teamDenis.jpg" alt="">
               </div>
               <div class="member-info">
-                <h3>Marian Dixon</h3>
-                <h4>CEO &amp; Founder</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                <h3>Malimon Denis</h3>
+                <h4>Full stack web developer</h4>
               </div>
               <div class="social-icons">
                 <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="500ms">
-              <div class="member-image">
-                <img class="img-responsive" src="images/team/2.jpg" alt="">
-              </div>
-              <div class="member-info">
-                <h3>Lawrence Lane</h3>
-                <h4>UI/UX Designer</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              </div>
-              <div class="social-icons">
-                <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
+                  <li><a class="facebook" target="_blank" href="https://www.facebook.com/profile.php?id=100006274180114"><i class="fa fa-facebook"></i></a></li>
+                  <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/denismalimon/"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a class="dribbble" target="_blank" href="https://github.com/denjamal"><i class="fa fa-github"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -367,29 +343,8 @@
               </div>
               <div class="social-icons">
                 <ul>
-                  <li><a class="facebook" href="https://www.facebook.com/vasiliy.malimon" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="linkedin" href="https://www.linkedin.com/in/vasiliy-malimon-b05877125/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="1100ms">
-              <div class="member-image">
-                <img class="img-responsive" src="images/team/4.jpg" alt="">
-              </div>
-              <div class="member-info">
-                <h3>Marian Dixon</h3>
-                <h4>Support Manager</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              </div>
-              <div class="social-icons">
-                <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
+                  <li><a class="facebook" target="_blank" href="https://www.facebook.com/vasiliy.malimon" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/vasiliy-malimon-b05877125/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
               </div>
             </div>
