Small change to the team section

--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
               </div>
               <div class="member-info">
                 <h3>Vasiliy Malimon</h3>
-                <h4>Developer</h4>
-                <p>Front End Developer <br>ARS LONGA, VITA BREVIS &#169;</p>
+                <h4>Front End Developer</h4>
+                <p>ARS LONGA, VITA BREVIS &#169;</p>
               </div>
               <div class="social-icons">
                 <ul>
