Animation for the "explore" button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="caption">
         <h1 class="animated fadeInLeftBig">We are <span>Solid</span></h1>
         <p class="animated fadeInRightBig">Web design and development</p>
-        <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Explore</a>
+        <a data-scroll id="explore" class="btn btn-start animated fadeInUpBig" href="#services">Explore</a>
       </div>
       <a id="tohash" href="#services"><i class="fa fa-angle-down"></i></a>
     </div>
