--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                   <li><i class="fa fa-map-marker"></i> <span> Address:</span> Podilska 25 st., Khmelnytskiy, Ukraine, 29000 </li>
                   <li><i class="fa fa-phone"></i> <span> Phone:</span> +38 (097) 9219 600 </li>
                   <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com"> solidsoftmanager@gmail.com</a></li>
-                  <li><i class="fa fa-globe"></i> <span> Website:</span> <a href="#">www.sitename.com</a></li>
+                  <li><i class="fa fa-skype"></i> <span> Website:</span> <a href="skype:denjamal88?call">skype</a></li>
                 </ul>
               </div>
             </div>
