Add the email to the footer social

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 <ul class="address">
                   <li><i class="fa fa-map-marker"></i> <span> Address:</span> Podilska 25 st., Khmelnytskiy, Ukraine, 29000 </li>
                   <li><i class="fa fa-phone"></i> <span> Phone:</span> +38 (097) 9219 600 </li>
-                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com"> solidsoftmanager@gmail.com</a></li>
+                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:solidsoftmanager@gmail.com"> solidsoftmanager@gmail.com</a></li>
                   <li><i class="fa fa-skype"></i> <span> Website:</span> <a href="skype:denjamal88?call">skype</a></li>
                 </ul>
               </div>
@@ -453,9 +453,9 @@
         </div>
         <div class="social-icons">
           <ul>
-            <li><a class="envelope" href="#"><i class="fa fa-envelope"></i></a></li>
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a class="envelope" href="mailto:solidsoftmanager@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            <!--<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>-->
           </ul>
         </div>
       </div>
