change: change preloader

--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
 <!--/head-->
 <body>
   <!--.preloader-->
-  <div class="preloader"> <i class="fa fa-circle-o-notch fa-spin"></i></div>
+  <div class="preloader">
+     <div class="circle-wrapper">
+        <div class="circ1"></div>
+        <div class="circ2"></div>
+        <div class="circ3"></div>
+        <div class="circ4"></div>
+      </div>
+  </div>
   <!--/.preloader-->
   <header id="home">
     <div id="vegas">
