--- a/index.html
+++ b/index.html
@@ -484,7 +484,8 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src = "js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/vegas.min.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyA-TDgmMW0FgRxsd2N9PF2TjTOqlDQsAmM&amp;sensor=true"></script>
+  
   <script type="text/javascript" src="js/jquery.inview.min.js"></script>
   <script type="text/javascript" src="js/wow.min.js"></script>
   <script type="text/javascript" src="js/mousescroll.js"></script>
