--- a/portfolio/portfolio-AdrenalinGym.html
+++ b/portfolio/portfolio-AdrenalinGym.html
@@ -6,8 +6,8 @@
 			<div class="col-sm-8">
 				<div class="project-info">
 					<h3>Adrenalin Gym</h3>
-					<p>Personal website for local gym.</p>
-					<p>We developed this project Facebook API (to display recent post from facebook page), javascript, webpack(for the build), HTML5, CSS3.</p>
+					<p>Landing page for a local gym.</p>
+					<p>Clean and simple project using Facebook API (to display recent facebook's posts), javascript, webpack(for the build), HTML5 and CSS3.</p>
 				</div>
 			</div>
 			<div class="col-sm-4">
