Update email adress

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
@@ -40,24 +40,25 @@
   <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <!-- Google Analytics -->
-<script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'UA-102370949-1', 'auto');
-  ga('send', 'pageview');
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
-<!-- End Google Analytics -->
+  <script>
+    window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+    ga('create', 'UA-102370949-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
 </head>
 <!--/head-->
+
 <body>
   <!--.preloader-->
   <div class="preloader">
-     <div class="circle-wrapper">
-        <div class="circ1"></div>
-        <div class="circ2"></div>
-        <div class="circ3"></div>
-        <div class="circ4"></div>
-      </div>
+    <div class="circle-wrapper">
+      <div class="circ1"></div>
+      <div class="circ2"></div>
+      <div class="circ3"></div>
+      <div class="circ4"></div>
+    </div>
   </div>
   <!--/.preloader-->
   <header id="home">
@@ -176,7 +177,8 @@
         <div class="col-sm-6">
           <div class="about-info wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
             <h2>About us</h2>
-            <p>We are a boutique agency of experienced IT professionals who love coding and web development. Our goal is to provide a quality solution for you or your business. <br> We are great in: </p>
+            <p>We are a boutique agency of experienced IT professionals who love coding and web development. Our goal is
+              to provide a quality solution for you or your business. <br> We are great in: </p>
             <p>
               • ASP.NET <br>
               • HTML/CSS <br>
@@ -191,25 +193,29 @@
             <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <p class="lead">UX/UI</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="95">95%</div>
+                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar"
+                  aria-valuetransitiongoal="95">95%</div>
               </div>
             </div>
             <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="400ms">
               <p class="lead">Web Development</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="96">96%</div>
+                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar"
+                  aria-valuetransitiongoal="96">96%</div>
               </div>
             </div>
             <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
               <p class="lead">Programming</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="90">90%</div>
+                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar"
+                  aria-valuetransitiongoal="90">90%</div>
               </div>
             </div>
             <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
               <p class="lead">Graphic Design</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="85">85%</div>
+                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar"
+                  aria-valuetransitiongoal="85">85%</div>
               </div>
             </div>
           </div>
@@ -222,7 +228,8 @@
   <section id="portfolio">
     <div class="container">
       <div class="row">
-        <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms"
+          data-wow-delay="300ms">
           <h2>Portfolio</h2>
           <p>If you are looking for something specific, please enquire via <a href="#contact">Contact Us form</a>.</p>
         </div>
@@ -243,7 +250,8 @@
                     <p>typescript, javascript, html, css, angular 4</p>
                   </div>
                   <div class="folio-overview">
-                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-MeatBall.html" ><i class="fa fa-link"></i></a></span>
+                    <span class="folio-link"><a class="folio-read-more" href="#"
+                        data-single_url="portfolio/portfolio-MeatBall.html"><i class="fa fa-link"></i></a></span>
                   </div>
                 </div>
               </div>
@@ -263,7 +271,8 @@
                     <p>Facebook API, HTML, CSS, JS, webpack.</p>
                   </div>
                   <div class="folio-overview">
-                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-AdrenalinGym.html" ><i class="fa fa-link"></i></a></span>
+                    <span class="folio-link"><a class="folio-read-more" href="#"
+                        data-single_url="portfolio/portfolio-AdrenalinGym.html"><i class="fa fa-link"></i></a></span>
                   </div>
                 </div>
               </div>
@@ -283,7 +292,8 @@
                     <p>Wordpres, JavaScript, SASS</p>
                   </div>
                   <div class="folio-overview">
-                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-OlgaKramar.html" ><i class="fa fa-link"></i></a></span>
+                    <span class="folio-link"><a class="folio-read-more" href="#"
+                        data-single_url="portfolio/portfolio-OlgaKramar.html"><i class="fa fa-link"></i></a></span>
                   </div>
                 </div>
               </div>
@@ -293,7 +303,8 @@
         <div class="col-sm-3">
           <div class="folio-item wow fadeInLeftBig" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="folio-image">
-              <img class="img-responsive" src="images/portfolio/OneSignal/SignalIndexSmall.jpg" alt="web development solid soft">
+              <img class="img-responsive" src="images/portfolio/OneSignal/SignalIndexSmall.jpg"
+                alt="web development solid soft">
             </div>
             <div class="overlay">
               <div class="overlay-content">
@@ -303,26 +314,28 @@
                     <p>Vue.js, JavaScript, ES6</p>
                   </div>
                   <div class="folio-overview">
-                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-OneSignal.html" ><i class="fa fa-link"></i></a></span>
+                    <span class="folio-link"><a class="folio-read-more" href="#"
+                        data-single_url="portfolio/portfolio-OneSignal.html"><i class="fa fa-link"></i></a></span>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-    </div>
-    <div id="portfolio-single-wrap">
-      <div id="portfolio-single">
       </div>
-    </div>
-    <!-- /#portfolio-single-wrap -->
+      <div id="portfolio-single-wrap">
+        <div id="portfolio-single">
+        </div>
+      </div>
+      <!-- /#portfolio-single-wrap -->
   </section>
   <!--/#portfolio-->
 
   <section id="team">
     <div class="container">
       <div class="row">
-        <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
+        <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1200ms"
+          data-wow-delay="300ms">
           <h2>The Team</h2>
         </div>
       </div>
@@ -339,9 +352,13 @@
               </div>
               <div class="social-icons">
                 <ul>
-                  <li><a class="facebook" target="_blank" href="https://www.facebook.com/profile.php?id=100006274180114"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/denismalimon/"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" target="_blank" href="https://github.com/denjamal"><i class="fa fa-github"></i></a></li>
+                  <li><a class="facebook" target="_blank"
+                      href="https://www.facebook.com/profile.php?id=100006274180114"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/denismalimon/"><i
+                        class="fa fa-linkedin"></i></a></li>
+                  <li><a class="dribbble" target="_blank" href="https://github.com/denjamal"><i
+                        class="fa fa-github"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -358,8 +375,10 @@
               </div>
               <div class="social-icons">
                 <ul>
-                  <li><a class="facebook" target="_blank" href="https://www.facebook.com/vasiliy.malimon" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/vasiliy-malimon-b05877125/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a class="facebook" target="_blank" href="https://www.facebook.com/vasiliy.malimon"
+                      target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/vasiliy-malimon-b05877125/"
+                      target="_blank"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -397,13 +416,15 @@
     </div>
   </section>
   <!--/#features-->
- 
+
   <section id="contact">
-    <div id="google-map" class="wow fadeIn" data-latitude="49.422983" data-longitude="26.987133" data-wow-duration="1000ms" data-wow-delay="400ms"></div>
+    <div id="google-map" class="wow fadeIn" data-latitude="49.422983" data-longitude="26.987133"
+      data-wow-duration="1000ms" data-wow-delay="400ms"></div>
     <div id="contact-us" class="parallax">
       <div class="container">
         <div class="row">
-          <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms"
+            data-wow-delay="300ms">
             <h2>Contact Us</h2>
             <p>Feel free to ask any questions. We are avaliable via email, phone or Skype call.</p>
           </div>
@@ -411,7 +432,8 @@
         <div class="contact-form wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
           <div class="row">
             <div class="col-sm-6">
-              <form id="main-contact-form" name="contact-form" method="post" action="//formspree.io/solidsoftmanager@gmail.com">
+              <form id="main-contact-form" name="contact-form" method="post"
+                action="//formspree.io/devmalimon@gmail.com">
                 <div class="row  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
                   <div class="col-sm-6">
                     <div class="form-group">
@@ -420,7 +442,8 @@
                   </div>
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <input type="email" name="_replyto" class="form-control" placeholder="Email Address" required="required">
+                      <input type="email" name="_replyto" class="form-control" placeholder="Email Address"
+                        required="required">
                     </div>
                   </div>
                 </div>
@@ -428,7 +451,8 @@
                   <input type="text" name="_subject" class="form-control" placeholder="Subject" required="required">
                 </div>
                 <div class="form-group">
-                  <textarea name="message" id="message" class="form-control" rows="4" placeholder="Enter your message" required="required"></textarea>
+                  <textarea name="message" id="message" class="form-control" rows="4" placeholder="Enter your message"
+                    required="required"></textarea>
                 </div>
                 <div class="form-group">
                   <button type="submit" class="btn-submit">Send Now</button>
@@ -439,9 +463,11 @@
               <div class="contact-info wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
                 <p>We are located in a small town in western Ukraine. </p>
                 <ul class="address">
-                  <li><i class="fa fa-map-marker"></i> <span> Address:</span> Podilska 25 st., Khmelnytskiy, Ukraine, 29000 </li>
+                  <li><i class="fa fa-map-marker"></i> <span> Address:</span> Podilska 25 st., Khmelnytskiy, Ukraine,
+                    29000 </li>
                   <li><i class="fa fa-phone"></i> <span> Phone:</span> +38 (097) 9219 600 </li>
-                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:solidsoftmanager@gmail.com"> solidsoftmanager@gmail.com</a></li>
+                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:solidsoftmanager@gmail.com">
+                      solidsoftmanager@gmail.com</a></li>
                   <li><i class="fa fa-skype"></i> <span> Website:</span> <a href="skype:denjamal88?call">skype</a></li>
                 </ul>
               </div>
@@ -479,10 +505,11 @@
   </footer>
 
   <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src = "js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/vegas.min.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyA-TDgmMW0FgRxsd2N9PF2TjTOqlDQsAmM&amp;sensor=true"></script>
-  
+  <script type="text/javascript"
+    src="http://maps.google.com/maps/api/js?key=AIzaSyA-TDgmMW0FgRxsd2N9PF2TjTOqlDQsAmM&amp;sensor=true"></script>
+
   <script type="text/javascript" src="js/jquery.inview.min.js"></script>
   <script type="text/javascript" src="js/wow.min.js"></script>
   <script type="text/javascript" src="js/mousescroll.js"></script>
